--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,8 @@
 # Documents to excude
 Practice.ipynb
 Mission_to_Mars.ipynb
+Mission_to_Mars_Challenge_starter_code.ipynb
+index_practice.html
 
 # Byte-compiled / optimized / DLL files
 __pycache__/
